fixed gapi client calendar

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -35,6 +35,7 @@ mz-navbar-item  a {
     display: none;
   }
   .toogle_menu {
+    transition: all 300ms linear;
     display: block!important;
     margin-top: 10px;
     padding: 0;
@@ -61,6 +62,6 @@ mz-navbar-item  a {
     max-height: 32px;
   }
   .toogle_menu {
-    margin-top: 0;
+    margin-top: 3px;
   }
 }
